--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nextra": "^2.3.0",
     "nextra-theme-docs": "^2.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remark-mdx-disable-explicit-jsx": "^0.1.0"
   }
 }
